--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,2 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bitter:wght@800&display=swap');
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
