Alinha verticalmente e horizontalmente elementos do header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,3 +10,9 @@
     --font-titulo: 'Bitter', serif;
     --cor-principal: #FB9C06;
 }
+
+.cabecalho {
+    display: flex;
+    align-items: center;
+    justify-content: center;    
+}
