Define background color do header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,5 +14,6 @@
 .cabecalho {
     display: flex;
     align-items: center;
-    justify-content: center;    
+    justify-content: center;  
+    background-color: var(--cor-principal);  
 }
