--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,3 +17,9 @@
     justify-content: center;  
     background-color: var(--cor-principal);  
 }
+
+main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
