Centraliza os elementos da section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,3 +25,9 @@ main {
     justify-content: center;
     padding-top: 30px;
 }
+
+main section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
