--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,8 @@
 
 :root {
     --font-titulo: 'Bitter', serif;
-    --cor-principal: #FB9C06;
+    --cor-principal: #3F3D56;
+    --cor-secundaria: #fb9c06;
 }
 
 .cabecalho {
