Define background color da body

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,10 @@
     --cor-secundaria: #fb9c06;
 }
 
+body {
+    background-color: var(--cor-principal);
+}
+
 .cabecalho {
     display: flex;
     align-items: center;
