--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ main {
     max-width: 1440px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     padding-top: 30px;
 }
 
