Substitui padding top por margin top

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ body {
     align-items: center;
     justify-content: center;  
     color: var(--cor-secundaria);
-    padding-top: 1rem;
+    margin-top: 1rem;
 }
 
 main {
