--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,10 @@ body {
     margin-top: 1rem;
 }
 
+.cabecalho .cabecalho__titulo {
+    font-family: var(--font-titulo);
+}
+
 main {
     max-width: 1440px;
     display: flex;
