Define font size do icone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,10 @@ body {
     font-weight: 800;
 }
 
+.cabecalho .fa-location-dot {
+    font-size: 2rem;
+}
+
 main {
     max-width: 1440px;
     display: flex;
