--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    padding-top: 30px;
+    margin-top: 30px;
 }
 
 .ilustracao {
