--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ body {
 .cabecalho .cabecalho__titulo {
     font-family: var(--font-titulo);
     font-weight: 800;
+    margin-right: 10px;
 }
 
 .cabecalho .fa-location-dot {
