--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,7 @@ main {
     align-items: center;
     justify-content: space-around;
     margin-top: 30px;
+    color: var(--cor-secundaria);
 }
 
 .ilustracao {
