Adicina margin right para input de cidae

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,10 @@ main form .container__input {
     display: flex;
 }
 
+.container__input .input-cidade {
+    margin-right: 20px;
+}
+
 .ilustracao {
     width: 25rem;
 }
