--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,12 @@ main {
     color: var(--cor-secundaria);
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 main form .container__input {
     display: flex;
 }
