--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,7 @@ main form .container__input {
 .form-btn {
     width: 90%;
     padding: 5px;
+    background-color: var(--cor-secundaria);
 }    
 
 .ilustracao {
