--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,7 @@ main form .container__input {
     width: 90%;
     padding: 5px;
     background-color: var(--cor-secundaria);
+    color: white;
 }    
 
 .ilustracao {
