--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,7 @@ body {
 
 main {
     max-width: 1440px;
+    height: calc(100% - 110px);
     display: flex;
     align-items: center;
     justify-content: space-around;
