--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,12 @@ main {
     color: var(--cor-secundaria);
 }
 
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 form {
     display: flex;
     flex-direction: column;
