Remove box shadow dos inputs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,7 @@ main form .container__input {
 
 form .container .form-control:focus {
     border-color: white;
+    box-shadow: none;
 }
 
 .form-btn {
