Define flex direction column para a main

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,5 +90,7 @@ form .container .form-control:focus {
 }
 
 @media screen and (max-width: 768px) {
-    
+    main {
+        flex-direction: column-reverse;
+    }
 }
