Define font size dos elementos da div resultado

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,4 +93,8 @@ form .container .form-control:focus {
     main {
         flex-direction: column-reverse;
     }
+
+    .resultado-pesquisa {
+        font-size: 1.5rem;
+    }
 }
