--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,7 @@ form .container .form-control:focus {
 @media screen and (max-width: 768px) {
     main {
         flex-direction: column-reverse;
+        justify-content: center;
     }
 
     .resultado-pesquisa {
