--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,6 +98,10 @@ form .container .form-control:focus {
     .resultado-pesquisa {
         font-size: 1.5rem;
     }
+
+    .ilustracao {
+        width: 10rem;
+    }
 }
 
 @media screen and (max-width: 768px) and (min-width: 481px) {
