Define height auto para main

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,7 @@ form .container .form-control:focus {
     main {
         flex-direction: column-reverse;
         justify-content: center;
+        height: auto;
     }
 
     .resultado-pesquisa {
