Altera color do botão limpar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,7 @@ form .container-btn .btn {
 
 form .container-btn .btn:last-child {
     background-color: var(--cor-principal);
+    color: var(--cor-secundaria);
 }
 
 .resultado-pesquisa {
