Adiciona border ao botão limpar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,7 @@ form .container-btn .btn {
 form .container-btn .btn:last-child {
     background-color: var(--cor-principal);
     color: var(--cor-secundaria);
+    border: 1px solid var(--cor-secundaria);
 }
 
 .resultado-pesquisa {
