Posiciona input cidade e uf em linha

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,10 @@ form .container__input {
     flex-direction: column;
 }
 
+form .container__cidade-uf {
+    display: flex;
+}
+
 form .container__input .input-uf {
     width: 3rem;
 }
