--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ form .container .form-control:focus {
     box-shadow: none;
 }
 
-form .erro-cidade, .erro-uf, .erro-rua {
+form .erro-cidade, .erro-uf, .erro-rua, .erro {
     display: none;
 }
 
